--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,4 +112,6 @@ add_executable (show_alov src/visualizer/show_alov.cpp)
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} ${Boost_LIBRARIES})
 target_link_libraries (show_alov ${PROJECT_NAME})
 
-
+add_executable (show_regressor_test src/visualizer/show_regressor_test.cpp)
+target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} ${Caffe_LIBRARIES} ${Boost_LIBRARIES})
+target_link_libraries (show_regressor_test ${PROJECT_NAME})
